--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4285F4</color>
-    <color name="colorPrimaryDark">#3367D6</color>
-    <color name="colorAccent">#F4B400</color>
-    <color name="colorSecondary">#0F9D58</color>
+    <!-- 기존 색상들 -->
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorSecondary">#9E9E9E</color>
     <color name="white">#FFFFFF</color>
-    <color name="black">#000000</color>
-    <color name="dark_gray">#555555</color>
-    <color name="light_gray">#CCCCCC</color>
+    <color name="colorSelectedItem">#E8F0FE</color>
+    
+    <!-- 오류 해결을 위해 추가한 색상들 -->
+    <color name="dark_gray">#515151</color>
+    <color name="light_gray">#ACACAC</color>
     <color name="very_light_gray">#F5F5F5</color>
 </resources>
