--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -2,4 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/very_light_gray" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/light_gray" />
 </shape>
