--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- 기존 색상들 -->
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorSecondary">#9E9E9E</color>
+    <color name="colorSecondary">#4CAF50</color>
     <color name="white">#FFFFFF</color>
-    <color name="colorSelectedItem">#E8F0FE</color>
-    
-    <!-- 오류 해결을 위해 추가한 색상들 -->
-    <color name="dark_gray">#515151</color>
-    <color name="light_gray">#ACACAC</color>
+    <color name="light_gray">#E0E0E0</color>
+    <color name="dark_gray">#555555</color>
     <color name="very_light_gray">#F5F5F5</color>
+    <color name="colorSelectedItem">#E8F0FE</color>
 </resources>
