feat: 프로필 사진 업로드 -------------------- MainActivity 를 제외한 나머지 하위 폴더로 경로 수정 --------------------

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,15 +11,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Calendar View -->
-        <CalendarView
-            android:id="@+id/calendarView"
+        <ru.cleverpumpkin.calendar.CalendarView
+            android:id="@+id/crunchyCalendarView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_height="450dp" />
 
-        <!-- Schedule List -->
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
