--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,22 +11,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Calendar View -->
-        <CalendarView
-            android:id="@+id/calendarView"
+        <ru.cleverpumpkin.calendar.CalendarView
+            android:id="@+id/crunchyCalendarView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_height="450dp" />
 
-        <!-- 구분선 추가 -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/light_gray"
-            android:layout_marginVertical="8dp" />
 
-        <!-- Schedule List -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,14 +36,18 @@
             android:padding="16dp"
             android:visibility="visible"/>
 
-        <!-- 간단한 텍스트뷰로 일정 표시 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSchedules"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="16dp"
+            android:visibility="gone"/>
+
         <TextView
             android:id="@+id/tvScheduleList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:background="@drawable/bg_recycler_view"
-            android:layout_margin="16dp"
             android:visibility="gone"/>
     </LinearLayout>
 
