--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">hide-ipv4.xyz</domain>
+<!--        <domain includeSubdomains="true">10.0.2.2</domain>-->
     </domain-config>
 </network-security-config>
