feat,chore : 미구현된 게시판 및 게시글 기능 구현, 자잘한 오류 해결
- 더 보기 메뉴 구현
  - 게시글 수정 및 삭제 기능 구현
- 헤더에 게시판 이름이 안뜨는 문제 해결
- 뒤로가기 시 정보 업데이트가 안되던 문제 해결

--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -251,7 +251,6 @@
                 android:text="익명"
                 android:textSize="14sp"/>
 
-            <!-- Continuing activity_board.xml -->
             <EditText
                 android:id="@+id/etComment"
                 android:layout_width="0dp"
@@ -270,7 +269,7 @@
                 android:layout_height="40dp"
                 android:src="@drawable/ic_send"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:tint="@color/colorPrimary"/>
+                android:tint="@color/light_gray"/>
         </LinearLayout>
     </LinearLayout>
 
