--- a/app/src/main/res/drawable/ic_bookmark_filled.xml
+++ b/app/src/main/res/drawable/ic_bookmark_filled.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#FF2196F3"
-        android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+        android:pathData="M17,3L7,3c-1.1,0 -1.99,0.9 -1.99,2L5,21l7,-3 7,3L19,5c0,-1.1 -0.9,-2 -2,-2z"/>
 </vector>
